certs/hello-rist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - hello-risf.local.domain
      secretName: hello-risf-tls
    - hosts:
        - hello-itsf.local.domain
      secretName: hello-itsf-tls
  rules:
    - host: hello-risf.local.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-risf
                port:
                  number: 80
    - host: hello-itsf.local.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-itsf-pv
                port:
                  number: 80
